@@ -1,4 +1,4 @@
-AC_DEFUN(AC_C_COMPILE_FLAGS,[
+AC_DEFUN([AC_C_COMPILE_FLAGS],[
 NEW_CFLAGS="$CFLAGS"
 for ac_flag in $1
 do
